--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,10 +109,16 @@ main{
     border: none;
     padding: 20px 25px;
 }
+footer{
+    background-color: black;
+    color: rgb(255, 255, 255);
+}
 .future-subscribe{
     display: flex;
     gap: 330px;
-    margin: 130px 230px;
+    margin: 0px 230px;
+    padding-top: 140px;
+    padding-bottom: 120px;
 }
 .future-title{
     font-weight: 700;
@@ -134,11 +140,12 @@ main{
     margin-bottom: 30px;
 }
 form{
-    width: 100%;
+    /* width: 100%; */
 }
 input[type="email"]{
     border-radius: 5px;
     margin-bottom: 16px;
+    padding: 20px 30px;
 }
 .btn-third{
     /* margin-left: 65px; */
